--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,11 @@ github_username: jekyll
 theme: minima
 plugins:
   - jekyll-feed
+
+header_pages:
+  - pages/about.md
+  - pages/team.md
+  
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
