--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username: jekyll
 
+google_analytics: UA-137725262-2
 # Build settings
 theme: minima
 plugins:
@@ -35,7 +36,6 @@ plugins:
 header_pages:
   - pages/about.md
   - pages/team.md
-  
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
