--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ plugins:
   - jekyll-feed
 
 header_pages:
-  - pages/about.md
   - pages/team.md
+  - pages/pillar.md
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
